# strava-cli

.github/workflows/: release.yml  test.yml
oauth-server/: Dockerfile  pyproject.toml
oauth-server/strava_oauth_server/: __init__.py  main.py
src/strava_cli/: auth.py  config.py
src/strava_cli/commands/: auth.py
tests/: test_oauth_flow.py
